# xmc1100-cmake-example

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  linker_script.ld  main.c
Libraries/CMSIS/Infineon/XMC1100_series/Include/: XMC1100.h  system_XMC1100.h
Startup/: startup_XMC1100.S  system_XMC1100.c
